--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
         "lucide-react": "^0.446.0",
+        "quill": "^2.0.2",
         "react-hook-form": "^7.53.0",
+        "react-quilljs": "^2.0.4",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
