--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.2",
+        "@rollup/rollup-linux-x64-gnu": "^4.22.5",
         "@tanstack/react-table": "^8.20.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -46,5 +47,8 @@
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
+    },
+    "resolutions": {
+        "rollup": "npm:@rollup/rollup-linux-x64-gnu"
     }
 }
