--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /.phpunit.cache
 /bootstrap/ssr
 /node_modules
+/public/build
 /public/hot
 /public/storage
 /storage/*.key
@@ -19,3 +20,4 @@ yarn-error.log
 /.idea
 /.vscode
 /.zed
+package-lock.json
