--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "lucide-react": "^0.446.0",
         "quill": "^2.0.2",
         "react-hook-form": "^7.53.0",
+        "react-owl-carousel": "^2.3.3",
         "react-quilljs": "^2.0.4",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
