--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.1",
         "@radix-ui/react-tabs": "^1.1.0",
         "@radix-ui/react-toggle": "^1.1.0",
         "@radix-ui/react-toggle-group": "^1.1.0",
@@ -41,6 +42,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
         "lucide-react": "^0.446.0",
+        "moment": "^2.30.1",
         "quill": "^2.0.2",
         "react-hook-form": "^7.53.0",
         "react-owl-carousel": "^2.3.3",
