--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^43.2.0",
+        "@ckeditor/ckeditor5-react": "^9.3.0",
         "@hookform/resolvers": "^3.9.0",
         "@radix-ui/react-checkbox": "^1.1.1",
         "@radix-ui/react-dialog": "^1.1.1",
@@ -38,15 +40,18 @@
         "@radix-ui/react-tooltip": "^1.1.2",
         "@rollup/rollup-linux-x64-gnu": "^4.22.5",
         "@tanstack/react-table": "^8.20.5",
+        "ckeditor5": "^43.2.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
+        "jodit-react": "^4.1.2",
         "lucide-react": "^0.446.0",
         "moment": "^2.30.1",
         "quill": "^2.0.2",
         "react-hook-form": "^7.53.0",
         "react-owl-carousel": "^2.3.3",
         "react-quilljs": "^2.0.4",
+        "sass-embedded": "^1.79.4",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
