--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sass-embedded": "^1.79.4",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
     },
@@ -44,7 +45,6 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
-        "jodit-react": "^4.1.2",
         "lucide-react": "^0.446.0",
         "moment": "^2.30.1",
         "quill": "^2.0.2",
