--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "moment": "^2.30.1",
         "quill": "^2.0.2",
         "react-hook-form": "^7.53.0",
+        "react-lazy-load-image-component": "^1.6.2",
         "react-owl-carousel": "^2.3.3",
         "react-quilljs": "^2.0.4",
         "sass-embedded": "^1.79.4",
