--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@radix-ui/react-toggle-group": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.2",
         "@rollup/rollup-linux-x64-gnu": "^4.22.5",
+        "@tailwindcss/typography": "^0.5.15",
         "@tanstack/react-table": "^8.20.5",
         "ckeditor5": "^43.2.0",
         "class-variance-authority": "^0.7.0",
